slight color variation

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -340,12 +340,12 @@ body.dark {
 
 
     .q-layout {
-        background: #111;
+        background: #272727;
         color:#cecece;
 
 
         .q-layout-header {
-            background: #111;
+            background: #272727;
             box-shadow: none;
             border-bottom: 1px solid #333;
 
@@ -353,7 +353,7 @@ body.dark {
     }
 
     .q-layout-footer.status-footer {
-        background: #111;
+        background: #272727;
         color: #cecece;
         border-top: 1px solid #333;
     }
@@ -371,7 +371,7 @@ body.dark {
 
 
     .q-popover {
-        background: #222;
+        background: #3d3d3d;
         color:#cecece;
 
         .q-list-separator > .q-item-division + .q-item-division, .q-item-division + .q-item-separator {
@@ -395,12 +395,12 @@ body.dark {
 
         .modal-content,
         .modal-body {
-            background: #111;
+            background: #272727;
             color:#cecece;
         }
 
         .q-layout-header {
-            background: #111;
+            background: #272727;
             box-shadow: none;
             border-bottom: 1px solid #333;
 
